@@ -36,6 +36,9 @@ import java.util.*;
 
 import static io.micronaut.guides.core.GuideUtils.mergeMetadataList;
 
+/**
+ * Class that provides methods to parse guide metadata.
+ */
 @Singleton
 public class DefaultGuideParser implements GuideParser {
 
@@ -44,16 +47,27 @@ public class DefaultGuideParser implements GuideParser {
     private final JsonSchemaProvider jsonSchemaProvider;
     private final JsonMapper jsonMapper;
 
+    /**
+     * Constructs a new DefaultGuideParser.
+     *
+     * @param jsonSchemaProvider the JSON schema provider
+     * @param jsonMapper         the JSON mapper
+     */
     public DefaultGuideParser(JsonSchemaProvider jsonSchemaProvider, JsonMapper jsonMapper) {
         this.jsonSchemaProvider = jsonSchemaProvider;
         this.jsonMapper = jsonMapper;
-
     }
 
+    /**
+     * Parses the metadata of all guides in the specified directory.
+     *
+     * @param guidesDir          the directory containing the guides
+     * @param metadataConfigName the name of the metadata configuration file
+     * @return a list of parsed guides
+     */
     @Override
     @NonNull
-    public List<Guide> parseGuidesMetadata(@NonNull @NotNull File guidesDir,
-                                           @NonNull @NotNull String metadataConfigName) {
+    public List<Guide> parseGuidesMetadata(@NonNull @NotNull File guidesDir, @NonNull @NotNull String metadataConfigName) {
         List<Guide> metadatas = new ArrayList<>();
 
         File[] dirs = guidesDir.listFiles(File::isDirectory);
@@ -69,6 +83,13 @@ public class DefaultGuideParser implements GuideParser {
         return metadatas;
     }
 
+    /**
+     * Parses the metadata of a single guide.
+     *
+     * @param guidesDir          the directory containing the guide
+     * @param metadataConfigName the name of the metadata configuration file
+     * @return an optional containing the parsed guide, or empty if parsing failed
+     */
     @Override
     @NonNull
     public Optional<Guide> parseGuideMetadata(@NonNull @NotNull File guidesDir, @NonNull @NotNull String metadataConfigName) {
@@ -114,45 +135,9 @@ public class DefaultGuideParser implements GuideParser {
         List<App> apps = new LinkedList<>();
 
         for (App app : raw.apps()) {
-            apps.add(new App(
-                    app.name(),
-                    app.packageName(),
-                    app.applicationType(),
-                    app.framework(),
-                    app.features() != null ? app.features() : new ArrayList<>(),
-                    app.invisibleFeatures() != null ? app.invisibleFeatures() : new ArrayList<>(),
-                    app.kotlinFeatures() != null ? app.kotlinFeatures() : new ArrayList<>(),
-                    app.javaFeatures() != null ? app.javaFeatures() : new ArrayList<>(),
-                    app.groovyFeatures() != null ? app.groovyFeatures() : new ArrayList<>(),
-                    app.testFramework(),
-                    app.excludeTest(),
-                    app.excludeSource(),
-                    app.validateLicense()
-            ));
+            apps.add(new App(app.name(), app.packageName(), app.applicationType(), app.framework(), app.features() != null ? app.features() : new ArrayList<>(), app.invisibleFeatures() != null ? app.invisibleFeatures() : new ArrayList<>(), app.kotlinFeatures() != null ? app.kotlinFeatures() : new ArrayList<>(), app.javaFeatures() != null ? app.javaFeatures() : new ArrayList<>(), app.groovyFeatures() != null ? app.groovyFeatures() : new ArrayList<>(), app.testFramework(), app.excludeTest(), app.excludeSource(), app.validateLicense()));
         }
 
-        return Optional.of(new Guide(
-                raw.title(),
-                raw.intro(),
-                raw.authors(),
-                raw.categories(),
-                publish ? raw.publicationDate() : null,
-                raw.minimumJavaVersion(),
-                raw.maximumJavaVersion(),
-                raw.cloud(),
-                raw.skipGradleTests(),
-                raw.skipMavenTests(),
-                publish ? guidesDir.getName() + ".adoc" : null,
-                raw.languages() != null ? raw.languages() : List.of(Language.JAVA, Language.GROOVY, Language.KOTLIN),
-                raw.tags() != null ? raw.tags() : Collections.emptyList(),
-                raw.buildTools() != null ? raw.buildTools() : List.of(BuildTool.GRADLE, BuildTool.MAVEN),
-                raw.testFramework(),
-                raw.zipIncludes() != null ? raw.zipIncludes() : new ArrayList<>(),
-                guidesDir.getName(),
-                publish,
-                raw.base(),
-                raw.env() != null ? raw.env() : new HashMap<>(),
-                apps
-        ));
+        return Optional.of(new Guide(raw.title(), raw.intro(), raw.authors(), raw.categories(), publish ? raw.publicationDate() : null, raw.minimumJavaVersion(), raw.maximumJavaVersion(), raw.cloud(), raw.skipGradleTests(), raw.skipMavenTests(), publish ? guidesDir.getName() + ".adoc" : null, raw.languages() != null ? raw.languages() : List.of(Language.JAVA, Language.GROOVY, Language.KOTLIN), raw.tags() != null ? raw.tags() : Collections.emptyList(), raw.buildTools() != null ? raw.buildTools() : List.of(BuildTool.GRADLE, BuildTool.MAVEN), raw.testFramework(), raw.zipIncludes() != null ? raw.zipIncludes() : new ArrayList<>(), guidesDir.getName(), publish, raw.base(), raw.env() != null ? raw.env() : new HashMap<>(), apps));
     }
 }
